--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,7 +14,9 @@ a {
 	color: inherit;
 	text-decoration: none;
 }
-
+input, select, textarea {
+    font-family: "Lexend Deca",sans-serif;
+}
 * {
 	box-sizing: border-box;
 }
