--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,6 +17,11 @@ a {
 input, select, textarea {
     font-family: "Lexend Deca",sans-serif;
 }
+fieldset {	
+    border: none;
+    padding: 0;
+    margin: 0;
+}
 * {
 	box-sizing: border-box;
 }
